<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/mainNewsFragment"
            android:icon="@drawable/ic_language_24"
            android:title="@string/news" />

        <item
            android:id="@+id/covidFragment"
            android:icon="@drawable/ic_covid"
            android:title="@string/covid_19" />
    </group>

    <item android:title="@string/storage">
        <menu>
            <item
                android:id="@+id/favoriteFragment"
                android:icon="@drawable/ic_favorite_24"
                android:title="@string/favorite" />
        </menu>
    </item>
</menu>