<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.thaonx.mockt3h.view.fragment.news.HomeFragment"
        android:label="@string/home">
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_weatherFragment"
            app:destination="@id/weatherFragment" />
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/mainNewsFragment"
        android:name="com.thaonx.mockt3h.view.fragment.news.MainNewsFragment"
        android:label="@string/news">
        <action
            android:id="@+id/action_mainNewsFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.thaonx.mockt3h.view.fragment.news.FavoriteFragment"
        android:label="@string/favorite">
        <action
            android:id="@+id/action_favoriteFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.thaonx.mockt3h.view.fragment.news.DetailFragment"
        android:label="">
        <action
            android:id="@+id/action_detailFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_detailFragment_to_mainNewsFragment"
            app:destination="@id/mainNewsFragment" />
        <argument
            android:name="articles"
            app:argType="com.thaonx.mockt3h.model.Articles"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/covidFragment"
        android:name="com.thaonx.mockt3h.view.fragment.covid.CovidFragment"
        android:label="" />
    <dialog
        android:id="@+id/weatherFragment"
        android:name="com.thaonx.mockt3h.view.fragment.weather.WeatherFragment"
        android:label="fragment_weather"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.thaonx.mockt3h.view.fragment.news.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="q"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>
</navigation>