<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#677EFB"
        android:padding="20dp"
        tools:context=".view.activity.LoginActivity">

        <TextView
            android:id="@+id/titleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/title_login"
            android:textColor="@color/white"
            android:textSize="84sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_state_release"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline6">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="0dp"
                android:background="@drawable/bg_state_release"
                android:layout_height="wrap_content"
                android:hint="@string/edt_enter_name"
                android:padding="12dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/iconPerson"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iconPerson"
                app:layout_constraintTop_toTopOf="@+id/iconPerson"
                tools:ignore="Autofill,TextFields" />

            <ImageView
                android:id="@+id/iconPerson"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_baseline_perm_identity_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_state_release"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ctName">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_state_release"
                android:hint="@string/edt_enter_pass"
                android:padding="12dp"
                android:textSize="16sp"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="@+id/iconKeyPerson"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iconKeyPerson"
                app:layout_constraintTop_toTopOf="@+id/iconKeyPerson"
                tools:ignore="Autofill,TextFields" />

            <ImageView
                android:id="@+id/iconKeyPerson"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_baseline_vpn_key_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/save_pass"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/ctPass"
            app:layout_constraintStart_toStartOf="@+id/ctPass"
            app:layout_constraintTop_toBottomOf="@+id/ctPass" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.32" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_state_release"
            android:backgroundTint="#4E63D8"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>